--- a/responsive.css
+++ b/responsive.css
@@ -299,7 +299,7 @@ width: 100%;
 
             .sec {
 
-                position: absolute; top: 650px;
+                position: absolute, top: 650px;
                 width: 100%;
                 height: 580px;
 
