--- a/responsive.css
+++ b/responsive.css
@@ -297,13 +297,13 @@ width: 100%;
         
             }
 
-            .sec {
+          .sec {
 
-                position: absolute, top: 630px;
-                width: 100%;
-                height: 580px;
+            position: absolute; top: 630px;
+            width: 100%;
+            height: 580px;
 
-            }
+          }
 
 
 
